Add in-game assistant trace and memory diagnostics